# pyQCTools

./: README.md  pyproject.toml
DBF/: UHF_integrals.py  cr2_get_mos.py  n2_get_NOs_uccsd_frozen.py  n2_get_NOs_uccsd_full.py  n2_get_NOs_uhf_full.py  n2_get_mos_ccpvdz.py  n2_get_mos_rhf-CASCI_AS.py  n2_get_mos_rhf-CASSCF_AS.py  n2_get_mos_rhf_full.py  n2_get_mos_sto3g.py  n2_get_mos_uhf_full.py
ExchCoups/: exchcoup.py
QSP/: H2_RHF_dipole_moment_integrals.py  RHF_dipole_moment_integrals.py  td-dft_spectrum_ethylene.py  td-dft_spectrum_water.py  vertical_gaps_H2_CASSCF.py
QSP/Benzene_and_acenes/: Beneze_RHF_dipole_integrals.py  Benzene_RHF_dipole_integrals.py  Benzene_dipoleZ_integrals.py  Benzene_ground_state_CASSCF.py  Benzene_orbitals.py  Benzene_vertical_gaps_CASSCF.py  Naphthalene_orbitals.py  td-dft_spectrum_benzene.py
QSP/Ethylene_and_polyenes/: C2H4_RHF_dipole_moment_integrals.py  P1_RHF_dipole_moment_integrals.py  P1_ground_state_CASSCF.py  P1_orbitals.py  P1_vertical_gaps_CASSCF.py  P2_RHF_dipole_moment_integrals.py  P2_orbtials.py  (+21 more)
TIPSCI_prep/: He_8_ints_tipsci_example.py  orbitalpartitioning.py
src/: __init__.py  utils.py
tests/: AS-notes  CASSCF_example.py  H2_singlets_example.py  SR_LR_test.py  UHF_natural_orbitals.py  ccsd_example.py  cr2_PES.py  cr2_get_mos.py  fci_example.py  get_loc_mos.py  hubbard_test.py  localized_orbitals.py  n2_PES.py  n2_get_mos.py  n2_get_mos_ccpvdz.py  n2_get_mos_rhf-CASCI_AS.py  n2_get_mos_rhf-CASSCF_AS.py  n2_get_mos_rhf_full.py  n2_get_mos_sto3g.py  n2_get_mos_uhf_full.py  orbitals_from_pyscf.py  scf_stability.py
(+17 files in other folders)
